--- a/Act_10/Actividad_10.html
+++ b/Act_10/Actividad_10.html
@@ -7,8 +7,8 @@
     <title>Universidad</title>
 </head>
 <body>
-    <fieldset>
     <form action="Uni.php" method="POST">
+        <fieldset>
             <legend>Solicitud de ingreso a la Universidad</legend>
             <label> Nombre(s):
                 <input type="text" name="nom" required>
@@ -22,45 +22,47 @@
                 <input type="text" name="AM" required>
             </label>
             <br><br>
-            <label>Sexo: 
+            <label for=""> Sexo:
                 <label> Hombre
-                    <input type="radio" name="sexo" value="Hombre">
+                    <input type="radio" name="sexo" value="Hombre" required>
                 </label>
                 <label> Mujer
-                    <input type="radio" name="sexo" value="Mujer">
+                    <input type="radio" name="sexo" value="Mujer" required>
                 </label>
                 <label> Otro
-                    <input type="radio" name="sexo" value="Otro">
+                    <input type="radio" name="sexo" value="Otro" required>
                 </label>
             </label>
             <br><br>
             <label> Edad:
-                <input type="number" name="edad" min="17" max="100" required>
+                <input type="number" name="edad" min="17" max="100" required placeholder="mayor de 17 años">
             </label>
             <br><br>
             <label> Correo electrónico:  
-                <input type="email" name="CE" required>
+                <input type="email" name="CE" required placeholder="ejemplo@dominio.com">
             </label>
             <br><br>
             <label> Teléfono: 
-                <input type="text" name="tel" maxlength="10" required>
+                <input type="tel" name="tel" pattern="[0-9]{10}" placeholder="0000000000" maxlength="10" required>
             </label>
             <br><br>
             <label> Celular: 
-                <input type="text" name="cel" maxlength="10" required>
+                <input type="tel" name="cel" pattern="[0-9]{10}" placeholder="0000000000" maxlength="10" required>
             </label>
             <br><br>
             <label> Escuela de procedencia: 
             <select name="esc" required>
                 <option value="">Seleccione una opción</option>
-                <option value="ENP">Escuela Nacional Preparatoria</option>
-                <option value="CCH">Colegio de Ciencias y Humanidades</option>
+                <option value="Escuela Nacional Preparatoria">Escuela Nacional Preparatoria</option>
+                <option value="Colegio de Ciencias y Humanidades">Colegio de Ciencias y Humanidades</option>
+                <option value="Colegio de Bachilleres"> Colegio de Bachilleres</option>
+                <option value="Colegio Nacional de Educación Profesional Técnica">Colegio Nacional de Educación Profesional Técnica</option>
                 <option value="otro">Otra</option>
             </select>
             </label>
             <br><br>
             <label> Promedio: 
-                <input type="number" name="prom" min="6" max="10" required>
+                <input type="number" name="prom" min="6" max="10" placeholder="mayor a 5" required>
             </label>
             <br><br>
             <label> Primera opción: 
@@ -73,7 +75,7 @@
             <br><br>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpiar">
+        </fieldset>
     </form>
-    </fieldset>
 </body>
 </html>
