FIX se corrigió la dirección del directorio

--- a/Act_10/Actividad_10.html
+++ b/Act_10/Actividad_10.html
@@ -7,7 +7,7 @@
     <title>Universidad</title>
 </head>
 <body>
-    <form action="Uni.php" method="POST">
+    <form action="Actividad_10.php" method="POST">
         <fieldset>
             <legend>Solicitud de ingreso a la Universidad</legend>
             <label> Nombre(s):
